--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .header {
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
+    // box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
     width: 100%;
     top: 0;
     z-index: 999;
