--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,7 +5,9 @@
 *:focus {
     outline: none !important;
 }
-
+*::-webkit-scrollbar {
+    display: none;
+}
 body {
     background-color: #000;
 }
@@ -55,18 +57,30 @@ body {
             display: flex;
             align-items: flex-start;
             justify-content: space-evenly;
-            transition: all 0.8s ease-in-out;
+            transition: all 0.6s ease-in-out;
             &::before {
                 content: "";
-                background-image: url(../img/menu-bg.png);
-                display: block;
                 position: absolute;
+                background: black;
+                clip-path: polygon(0 0, 100% 0, 100% 100%);
+                overflow: hidden;
+                display: block;
                 width: 100%;
                 height: 100%;
                 top: 0;
                 right: 0;
                 z-index: -1;
             }
+        }
+        .hover-close {
+            position: absolute;
+            width: 5000px;
+            background: none;
+            height: 1000px;
+            top: 485px;
+            left: -1895px;
+            transform: rotate(33deg);
+            z-index: 2;
         }
         .show {
             top: 0;
