--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,7 +17,12 @@ body {
         width: 100%;
     }
 }
-
+.max-content{
+    width: max-content;
+    margin: auto;
+    
+    display: contents;
+}
 .header {
     // box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
     width: 100%;
@@ -61,7 +66,7 @@ body {
             &::before {
                 content: "";
                 position: absolute;
-                background: black;
+                background: rgb(37, 37, 37);
                 clip-path: polygon(0 0, 100% 0, 100% 100%);
                 overflow: hidden;
                 display: block;
