--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -97,7 +97,10 @@ body {
         }
     }
 }
-
+.footer {
+    bottom: 0;
+    width: 100%;
+}
 // .main::before {
 //     content: '';
 //     position: fixed;
