--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,6 +18,14 @@ body {
   width: 100%;
 }
 
+.max-content {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin: auto;
+  display: contents;
+}
+
 .header {
   width: 100%;
   top: 0;
@@ -51,14 +59,14 @@ body {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-transition: all 1.2s ease-in-out;
-  transition: all 1.2s ease-in-out;
+  -webkit-transition: all 0.6s ease-in-out;
+  transition: all 0.6s ease-in-out;
 }
 
 .header nav .menu::before {
   content: "";
   position: absolute;
-  background: black;
+  background: #252525;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%);
           clip-path: polygon(0 0, 100% 0, 100% 100%);
   overflow: hidden;
@@ -70,7 +78,35 @@ body {
   z-index: -1;
 }
 
-.header nav .hover-close {
+@media (max-width: 767.98px) {
+  .header nav .menu::before {
+    -webkit-clip-path: None;
+            clip-path: None;
+  }
+}
+
+.header nav .show {
+  top: 0;
+  right: 0;
+}
+
+.header nav .hide {
+  top: -50vh;
+  right: -100%;
+}
+
+.display-none {
+  display: none;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.footer {
+  bottom: 0;
+  width: 100%;
+}
+
+.hover-close {
   position: absolute;
   width: 5000px;
   background: none;
@@ -82,14 +118,15 @@ body {
   z-index: 2;
 }
 
-.header nav .show {
-  top: 0;
-  right: 0;
-}
-
-.header nav .hide {
-  top: -50vh;
-  right: -100%;
+@media (max-width: 767.98px) {
+  .hover-close {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    width: 100%;
+    height: 100vh;
+    top: 0px;
+    left: -75%;
+  }
 }
 
 .banner img {
@@ -155,6 +192,7 @@ body {
   text-overflow: ellipsis;
 }
 
+.categories,
 .cart,
 .checkout {
   min-height: 400px;
