--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -2249,9 +2249,9 @@ body {
 
 ._2hCJu {
     height: calc(var(--vh, 1vh) * 100);
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex
+    // display: -webkit-box;
+    // display: -ms-flexbox;
+    // display: flex
 }
 
 ._1gEBu {
